# dl-book

./: .gitignore  .nojekyll  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE-code  LICENSE-text.md  README.md  THIRD_PARTY_NOTICES.md  _quarto.yml  dlbook.scss  index.html  index.qmd  katex-macros.html  mathjax-config.html  requirements.txt  robots.txt  search.json  sitemap.xml
chapters/: epilogue.html  epilogue.qmd
code/: pyproject.toml
code/dlbook/: __init__.py  evaluation.py  supervised.py  training.py
code/dlbook.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: README.md  book-corpus-ch1-9.txt  fashion-test.pt  fashion-train.pt
docs/: CONTINUING.md  arc-seeds.md  backlog.md  compatibility.md  dl-course-code.md  drafting-template.md  style-guide.md  test-time-memory-control-exercise-bank.md
filters/: pdf-chapter-xrefs.lua
scripts/: build_book_corpus_snapshot.py  build_tikz.sh  fetch_notebooks.py  tex2qmd.sh
sources/: 1-4-XOR.tex  10.0_ViT.tex  10.1.scaling.tex  10.2_pretrained.tex  11.1-before-fine-tuning.tex  11.2-peft.tex  11.3-quantization.tex  11.4-reinforcement-learning.tex  11.4S.tex  11L-llm-alignment.tex  12.1S-Multimodal.tex  12.2S-Diffusion.tex  12.3S-VAE.tex  12.4S-GAN.tex  12.diffusion.tex  1L-2_softmax.tex  1LS-1_UAT_Principles.tex  1LS-2_loss_SGD.tex  1_1_lin_Recap.tex  1_2_nonlinearity.tex  1_3_sgd_lecture_notes.tex  2-1-backprop.tex  2-2_Autodiff.tex  3-HPO-experimentation.tex  4.1-CNN.tex  4.2-CNN-2.tex  4.3-NextGenCNN.tex  6-AE-slides.tex  7.1-RNN-v3.tex  7.2-TF-Beam.tex  8.1-Attention.tex  9.1-self-attention.tex  README.md  (+13 more)
(+124 files in other folders)
