[project]
name = "dlbook"
version = "0.1.0"
description = "Support module for Deep Learning: Making It Learnable — canonical listings imported by chapters"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dlbook"]
